; ModuleID = '/home/carl/AnghaBench/libuv/docs/code/queue-cancel/extr_main.c_fib_.c'
source_filename = "/home/carl/AnghaBench/libuv/docs/code/queue-cancel/extr_main.c_fib_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @fib_(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = icmp eq i64 %7, 1
  br i1 %8, label %9, label %10

9:                                                ; preds = %6, %1
  store i64 1, i64* %2, align 8
  br label %18

10:                                               ; preds = %6
  %11 = load i64, i64* %3, align 8
  %12 = sub nsw i64 %11, 1
  %13 = call i64 @fib_(i64 %12)
  %14 = load i64, i64* %3, align 8
  %15 = sub nsw i64 %14, 2
  %16 = call i64 @fib_(i64 %15)
  %17 = add nsw i64 %13, %16
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %10, %9
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
